# poc-object-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
protos/: object_detection.proto
src/poc/object_detection/: client.py  server.py
src/poc/object_detection/protos/: object_detection_pb2.py  object_detection_pb2_grpc.py
src/poc/utils/: read_file.py
